--- a/static/style.css
+++ b/static/style.css
@@ -9,7 +9,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    background-color: #f2f2f2;
+    background-color: #194679;
     height: 100vh;
 }
 .traka{
@@ -35,3 +35,89 @@ label{
     font-size: 20px;
     font-weight: bold;
 }
+/* single range slider */
+.rangeContainer{
+    width: 100%;
+    padding: 25px;
+    text-align: center;
+}
+
+.slider{
+    appearance: none;
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    border-radius: 5px;
+    background: linear-gradient(to right, red, yellow);
+}
+
+/* slider thumb, should be a line */
+.slider::-webkit-slider-thumb{
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background-color: #194679;
+    cursor: pointer;
+}
+
+
+
+
+
+
+/* Double slider style */
+.range{
+    width: 100%;
+    padding: 25px;
+    text-align: center;
+
+}
+
+.range-slider {
+    height: 5px;
+    position: relative;
+    background-color: #e1e9f6;
+    border-radius: 2px;
+  }
+  .range-selected {
+    height: 100%;
+    left: 30%;
+    right: 30%;
+    position: absolute;
+    border-radius: 5px;
+    background-color: #1b53c0;
+  }
+
+  .range-input {
+    position: relative;
+  }
+  .range-input input {
+    position: absolute;
+    width: 100%;
+    height: 5px;
+    top: -7px;
+    background: none;
+    pointer-events: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+  }
+  .range-input input::-webkit-slider-thumb {
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    border: 3px solid #1b53c0;
+    background-color: #fff;
+    pointer-events: auto;
+    -webkit-appearance: none;
+  }
+  .range-input input::-moz-range-thumb {
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    border: 3px solid #1b53c0;
+    background-color: #fff;
+    pointer-events: auto;
+    -moz-appearance: none;
+  }
