--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/style.css">
+    <script src="script.js"></script>
     <title>Pokretna traka</title>
 </head>
 <body>
     <div class="container">
+        <!-- Double slider(not working as intended) -->
+        <div class="range">
+            <div class="range-slider">
+                <span class="range-selected"></span>
+              </div>
+              <div class="range-input">
+                <input type="range" class="min" min="0" max="1000" value="300" step="10">
+                <input type="range" class="max" min="0" max="1000" value="700" step="10">
+            </div>
+        </div>
+        
+        <div class="rangeContainer">
+            <input type="range" min="0" max="360" name="colorRange" id="colR" class="slider">
+        </div>
         <div class="traka">
             <h1>Traka 1</h1>
-            <form action = "/success" method = "post" enctype="multipart/form-data">   
+            <form action = "/" method = "post" enctype="multipart/form-data">   
                 <input type="file" name="file"/>
                 <input type="submit" value="Upload"/>   
             </form> 
@@ -50,5 +65,6 @@
             </form>
         </div>
     </div>
+    
 </body>
 </html>
