--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,40 @@
     <title>Pokretna traka</title>
 </head>
 <body>
+    <div class="wrapper">
+        <div class="settings">
+            <span id="counterAll">155</span>
+            <div class="sortingSettings">
+                <button type="button">Boje i oblik</button>
+                <button type="button">Model</button>
+                <form action = "/success" method = "post" enctype="multipart/form-data">   
+                    <input type="file" name="file"/>
+                    <input type="submit" value="Upload"/>   
+                </form> 
+            </div>
+        </div>
+        <div class="conveyor">
+            <div class="direction" id="directionLeft">
+                <h1>Levo</h1>
+                <span class="counter" id="counterLeft">10</span>
+                <div class="rangeContainer">
+                    <input type="range" min="0" max="360" name="colorRange" id="colR" class="slider">
+                </div>
+            </div>
+            <div class="direction" id="directionStraight">
+                <h1>Pravo</h1>
+                <span class="counter" id="counterStraight">10</span>
+            </div>
+            <div class="direction" id="directionRight">
+                <h1>Desno</h1>
+                <span class="counter" id="counterRight">10</span>
+            </div>
+        </div>
+    </div>
+    </div>
     <div class="container">
         <!-- Double slider(not working as intended) -->
-        <div class="range">
+        <!-- <div class="range">
             <div class="range-slider">
                 <span class="range-selected"></span>
               </div>
@@ -18,52 +49,7 @@
                 <input type="range" class="min" min="0" max="1000" value="300" step="10">
                 <input type="range" class="max" min="0" max="1000" value="700" step="10">
             </div>
-        </div>
-        
-        <div class="rangeContainer">
-            <input type="range" min="0" max="360" name="colorRange" id="colR" class="slider">
-        </div>
-        <div class="traka">
-            <h1>Traka 1</h1>
-            <form action = "/" method = "post" enctype="multipart/form-data">   
-                <input type="file" name="file"/>
-                <input type="submit" value="Upload"/>   
-            </form> 
-            <span id="traka1"></span>
-            <form method="Post">
-            <label for="model1">Izaberite model</label>
-            <select name="model1" id="model1">
-                <option value="1">{{name}}</option>
-                <option value="2">Model 2</option>
-                <option value="3">Model 3</option>
-            </select>
-            </form>
-
-        </div>
-        <div class="traka">
-            <h1>Traka 2</h1>
-            <span id="traka2"></span>
-            <form method="Post">
-            <label for="model2">Izaberite model</label>
-            <select name="model2" id="model2">
-                <option value="1">Model 1</option>
-                <option value="2">Model 2</option>
-                <option value="3">Model 3</option>
-            </select>
-            </form>
-        </div>
-        <div class="traka">
-            <h1>Traka 3</h1>
-            <span id="traka3"></span>
-            <form method="Post">
-            <label for="model3">Izaberite model</label>
-            <select name="model3" id="model3">
-                <option value="1">Model 1</option>
-                <option value="2">Model 2</option>
-                <option value="3">Model 3</option>
-            </select>
-            </form>
-        </div>
+        </div> -->
     </div>
     
 </body>
