--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,12 @@
 *{
     margin: 0;
 }
+
+#largeNum{
+    font-size: 155px;
+    text-shadow: 1px 1px 1px #000;
+
+}
 .wrapper{
     width: 100%;
     margin: 0 auto;
@@ -9,7 +15,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    background-color: #194679;
+    background-color: #E4E5F1;
     height: 100vh;
 }
 
@@ -23,8 +29,9 @@
 }
 
 .settings{
-    border: 1px solid #e1e9f6;
-    width: 25%;
+    background-color: #D2D3DB;
+    border: 1px solid #9394A5;
+    width: 30%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -34,26 +41,64 @@
 }
 
 .conveyor .direction{
-    border: 1px solid #e1e9f6;
+    border: 1px solid #9394A5;
     width: calc(100%/3);
     height: 100vh;
     text-align: center;
 }
-
+span.counter{
+  font-size: 155px;
+  text-shadow: 1px 1px 1px #000;
+}
 .conveyor .direction .counter{
     font-size: 25px;
 }
+
 .wrapper .settings .sortingSettings{
     display: flex;
     flex-direction: column;
 }
 
+.sortingSettings{
+  width: 90%;
+}
+
+.sortingSettings button{
+  height: 50px;
+  margin: 5px;
+  background-color: #9394A5;
+  color: white;
+  border: none;
+  border-radius: 7px;
+}
+
+.sortingSettings button:hover {
+    
+    cursor: pointer;
+    animation: hoverAnimation 0.3s ease-in-out;
+    background-color: #6E6F7F;
+  }
+
+  @keyframes hoverAnimation {
+    0% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(1.001);
+      background-color: #6E6F7F;
+    }
+    
+  }
+
+
+
 #counterAll{
     height: 50%;
     position: relative;
     font-size: 25px;
-    margin-bottom: 10px;
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 
@@ -77,10 +122,12 @@
 /* slider thumb, should be a line */
 .slider::-webkit-slider-thumb{
     appearance: none;
-    width: 2px;
-    height: 35px;
+    border: 2px solid #E4E5F1;
+    color: transparent;
+    width: 4px;
+    height: 65px;
     border-radius: 25px;
-    background-color: #000000;
+    
     cursor: pointer;
 }
 
@@ -97,7 +144,7 @@
 
 }
 
-.range-slider {
+/* .range-slider {
     height: 5px;
     position: relative;
     background-color: #e1e9f6;
@@ -144,7 +191,7 @@
     pointer-events: auto;
     -moz-appearance: none;
   }
-
+ */
 
 
 datalist {
@@ -171,3 +218,54 @@ datalist {
   img{
     width: 50%;
   }
+  
+
+
+
+
+
+  section.range-slider {
+    position: relative;
+    width: 90%;
+    height: 85px;
+    text-align: center;
+}
+
+section.range-slider input {
+    pointer-events: none;
+    position: absolute;
+    overflow: hidden;
+    left: 0;
+    top: 15px;
+    width: 100%;
+    outline: none;
+    height: 50px;
+    margin: 0;
+    padding: 0;
+}
+
+section.range-slider input::-webkit-slider-thumb {
+    pointer-events: all;
+    position: relative;
+    z-index: 1;
+    outline: 0;
+}
+
+section.range-slider input::-moz-range-thumb {
+    pointer-events: all;
+    position: relative;
+    z-index: 10;
+    -moz-appearance: none;
+    width: 9px;
+}
+
+#directionLeft{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.rangeContainer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
