--- a/static/style.css
+++ b/static/style.css
@@ -269,3 +269,13 @@ section.range-slider input::-moz-range-thumb {
   flex-direction: column;
   align-items: center;
 }
+
+.canv{
+  width: 250px;
+  height: 250px;
+}
+
+.shapes{
+  display: none;
+  filter: hue-rotate(45deg);
+}
