--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/style.css">
-    <script src="/templates/script.js"></script>
+    <script type="module" src="/templates/script.js" defer></script>
     <title>Pokretna traka</title>
 </head>
 <body>
@@ -24,24 +24,24 @@
             <div class="direction" id="directionLeft">
                 <h1>Levo</h1>
                 <span class="counter" id="counterLeft">50</span>
+                <span>Boja</span>
                 <div class="rangeContainer">
                     <section class="range-slider">
                         <span class="rangeValues"></span>
-                        <input value="5" min="0" max="15" step="0.5" type="range" class="slider">
-                        <input value="10" min="0" max="15" step="0.5" type="range" class="slider">
+                        <input value="5" min="0" max="360" step="1" type="range" class="slider">
+                        <input value="10" min="0" max="360" step="1" type="range" class="slider">
                     </section>
                 </div>
                 <div class="shapeContainer">
                     <span>Broj stranica</span>
-                    <input type="range" class="shapeNumber" list="markers1"><!-- nek bude do 6 -->
+                    <input type="range" class="shapeNumber" list="markers1" id="shapeLeft" step="1" min="3" max="6" value="5" onchange="getSides()"><!-- nek bude do 6 -->
                     <datalist id="markers1">
                         <option value="0" label="3"></option>
-                        <option value="25" label="4"></option>
-                        <option value="50" label="5"></option>
-                        <option value="75" label="6"></option>
-                        <option value="100" label="7"></option>
+                        <option value="33" label="4"></option>
+                        <option value="66" label="5"></option>
+                        <option value="100" label="6"></option>
                     </datalist>
-                    <div class="imgContainer"><img src="https://cdn1.iconfinder.com/data/icons/shapes-102/24/_five_side-512.png" alt=""></div>
+                    <div class="imgContainer"><img src="/static/pics/3side.png" class="shapes" id="triangleLeft"><img src="/static/pics/4side.png" class="shapes" id="rectangleLeft1"><img src="/static/pics/5side.png" class="shapes" id="pentagon"><img src="/static/pics/6side.png" class="shapes" id="hexagon"></div>
                 </div>
             </div>
             <div class="direction" id="directionStraight">
@@ -60,7 +60,7 @@
                         <option value="75" label="6"></option>
                         <option value="100" label="7"></option>
                     </datalist>
-                    <div class="imgContainer"><img src="https://pluspng.com/img-png/triangle-png-triangle-stroke-png-512.png" alt=""></div>
+                    <div class="imgContainer"><canvas class="canv"></canvas></div>
                 </div>
             </div>
             <div class="direction" id="directionRight">
@@ -79,7 +79,7 @@
                         <option value="75" label="6"></option>
                         <option value="100" label="7"></option>
                     </datalist>
-                    <div class="imgContainer"><img src="https://pngimg.com/uploads/square/square_PNG19.png" alt=""></div>
+                    <div class="imgContainer"><canvas class="canv"></canvas></div>
                 </div>
             </div>
         </div>
