--- a/templates/index.html
+++ b/templates/index.html
@@ -24,8 +24,9 @@
             <div class="direction" id="directionLeft">
                 <h1>Levo</h1>
                 <span class="counter" id="counterLeft">50</span>
-                <span>Boja</span>
+                
                 <div class="rangeContainer">
+                    <span>Boja</span>
                     <section class="range-slider">
                         <span class="rangeValues"></span>
                         <input value="5" min="0" max="360" step="1" type="range" class="slider" onchange="getSides(0)">
@@ -44,7 +45,7 @@
                         </datalist>
                     </div>
                     
-                    <div class="imgContainer"><img src="/static/pics/3side.png" class="shapes" id="triangleLeft"><img src="/static/pics/4side.png" class="shapes" id="rectangleLeft1"><img src="/static/pics/5side.png" class="shapes" id="pentagon"><img src="/static/pics/6side.png" class="shapes" id="hexagon"></div>
+                    <div class="imgContainer"><img src="/static/pics/3side.png" class="shapes"><img src="/static/pics/4side.png" class="shapes" ><img src="/static/pics/5side.png" class="shapes"><img src="/static/pics/6side.png" class="shapes"></div>
                 </div>
             </div>
             <div class="direction" id="directionStraight">
@@ -68,26 +69,31 @@
                             <option value="100" label="6"></option>
                         </datalist>
                     </div>
-                    <div class="imgContainer"><img src="/static/pics/3side.png" class="shapes" ><img src="/static/pics/4side.png" class="shapes"><img src="/static/pics/5side.png" class="shapes"><img src="/static/pics/6side.png" class="shapes" id="hexagon"></div>
+                    <div class="imgContainer"><img src="/static/pics/3side.png" class="shapes" ><img src="/static/pics/4side.png" class="shapes"><img src="/static/pics/5side.png" class="shapes"><img src="/static/pics/6side.png" class="shapes" ></div>
                 </div>
             </div>
             <div class="direction" id="directionRight">
                 <h1>Desno</h1>
                 <span class="counter" id="counterRight">10</span>
                 <div class="rangeContainer">
-                    <input type="range" min="0" max="360" name="colorRange" id="colR" class="slider">
+                    <section class="range-slider">
+                        <span class="rangeValues"></span>
+                        <input value="5" min="0" max="360" step="1" type="range" class="slider" onchange="getSides(2)">
+                        <input value="10" min="0" max="360" step="1" type="range" class="slider" onchange="getSides(2)">
+                    </section>
                 </div>
                 <div class="shapeContainer">
                     <span>Broj stranica</span>
-                    <input type="range" class="shapeNumber" list="markers3">
-                    <datalist id="markers3">
-                        <option value="0" label="3"></option>
-                        <option value="25" label="4"></option>
-                        <option value="50" label="5"></option>
-                        <option value="75" label="6"></option>
-                        <option value="100" label="7"></option>
-                    </datalist>
-                    <div class="imgContainer"><canvas class="canv"></canvas></div>
+                    <div class="shapeNumContainer">
+                    <input type="range" class="shapeNumber" list="markers1" id="shapeStraight" step="1" min="3" max="6" value="5" onchange="getSides(2)"><!-- nek bude do 6 -->
+                        <datalist id="markers1">
+                            <option value="0" label="3"></option>
+                            <option value="33" label="4"></option>
+                            <option value="66" label="5"></option>
+                            <option value="100" label="6"></option>
+                        </datalist>
+                    </div>
+                    <div class="imgContainer"><img src="/static/pics/3side.png" class="shapes" ><img src="/static/pics/4side.png" class="shapes"><img src="/static/pics/5side.png" class="shapes"><img src="/static/pics/6side.png" class="shapes" ></div>
                 </div>
             </div>
         </div>
