--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,9 @@
                     <input type="submit" value="Upload"/>   
                 </form> 
             </div>
+            <form action="" method="post">
+                <input type="submit" value="Submit settings">
+            </form>
         </div>
         <div class="conveyor">
             <div class="direction" id="directionLeft">
